edits to all content page

--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -112,30 +112,63 @@
             </div>
           </div>
         </div>
-        <div class="tech-used container-fluid">
-          <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Technology Used</h2></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="tech col-sm-4 col-xs-12">
-                <img src="images/long-form-content/mapinfo-professional.png">
-                <h3><a href="#">MapInfo Professional</a></h3>
-                <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+        <div class="tech-used content-overflows container-fluid border">
+          <div class="col-xs-12">
+            <div class="border">
+              <div class="row first-row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
+                </div>
               </div>
-              <div class="tech col-sm-4 col-xs-12">
-                <img src="images/long-form-content/mapinfo-drive-time.png">
-                <h3><a href="#">MapInfo Drivetime</a></h3>
-                <p>TomTom Speed Profile Data to calculate accurate travel time</p>
+              <div class="row">
+                <div class="tech col-sm-4 col-xs-12">
+                  <img src="images/long-form-content/mapinfo-professional.png">
+                  <h3><a href="#">MapInfo Professional</a></h3>
+                  <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+                  <a href="#">Learn More ></a>
+                </div>
+                <div class="tech col-sm-4 col-xs-12">
+                  <img src="images/long-form-content/mapinfo-drive-time.png">
+                  <h3><a href="#">MapInfo Drivetime</a></h3>
+                  <p>TomTom Speed Profile Data to calculate accurate travel time</p>
+                  <a href="#">Learn More ></a>
+                </div>
+                <div class="tech col-sm-4 col-xs-12">
+                  <img src="images/long-form-content/pca.png">
+                  <h3>PCA’s Gravitiy Modelling System</h3>
+                  <p>Seamless integration with  Peugeot’s Gravity Modeling System for network planning and optimization</p>
+                  <a href="#">Learn More ></a>
+                </div>
               </div>
-              <div class="tech col-sm-4 col-xs-12">
-                <img src="images/long-form-content/pca.png">
-                <h3>PCA’s Gravitiy Modelling System</h3>
-                <p>Seamless integration with  Peugeot’s Gravity Modeling System for network planning and optimization</p>
+              <div class="row additional-content"><!-- second row - 2 options -->
+                <div class="tech col-sm-4 col-xs-12 col-sm-offset-1">
+                  <img src="images/long-form-content/mapinfo-professional.png">
+                  <h3><a href="#">MapInfo Professional</a></h3>
+                  <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+                  <a href="#">Learn More ></a>
+                </div>
+                <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
+                  <img src="images/long-form-content/mapinfo-drive-time.png">
+                  <h3><a href="#">MapInfo Drivetime</a></h3>
+                  <p>TomTom Speed Profile Data to calculate accurate travel time</p>
+                  <a href="#">Learn More ></a>
+                </div>
               </div>
-            </div>
+              <div class="row additional-content"><!-- second row - 2 options -->
+                <div class="tech col-sm-4 col-xs-12 col-sm-offset-4">
+                  <img src="images/long-form-content/mapinfo-professional.png">
+                  <h3><a href="#">MapInfo Professional</a></h3>
+                  <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+                  <a href="#">Learn More ></a>
+                </div>
+              </div>
+              <div class="view-all">
+                <a class="show" href="#">View All Technologies</a>
+                <img class="show" src="images/sprite/icn-view-all.jpg" alt="view all">
+                <a class="hide" href="#">Collapse</a>
+                <img class="hide" src="images/sprite/icn-view-collapse.jpg" alt="collapse">
+              </div>
+            </div><!-- border -->
           </div>
         </div><!-- tech-used -->
         <div class="copy-section container-fluid">
@@ -240,6 +273,7 @@
       <script src="scripts/pb.menu.js"></script>
       <script src="scripts/pb.model.js"></script>
       <script src="scripts/pb.header.js"></script>
+      <script src="scripts/pb.utils.js"></script>
       <!-- <script src="scripts/pb.category.js"></script> -->
       <!-- endbuild -->
 </body>
