implemented video player in 2 remaining modules, replaced videos with PB videos

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -213,7 +213,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-fullbg darkbg">
-                <div class="video-container video-full hide" data-video-id="txqiwrbYGrs">
+                <div class="video-container video-full hide" data-video-id="tjaPnFVc_aw">
                   <div id=""></div>
                 </div>
                 <span class="hidden-video-content">
@@ -260,7 +260,7 @@
                     <a href="#" class="read-more">. . .</a>
                   </div>
                 </div><!--/.cat-techlinks-->
-                <div class="video-container video-half hide col-sm-6 bg col-xs-12 vert" data-video-id="M7lc1UVf-VE">
+                <div class="video-container video-half hide col-sm-6 bg col-xs-12 vert" data-video-id="xXBaFcm_7BM">
                   <div id=""></div>
                 </div>
                 <span class="hidden-video-content">
@@ -371,37 +371,47 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="module col2 left halfheight">
-                  <div class="col-xs-12">
-                    <div class="col-xs-12 type-cat border white pos">
-                      <a href="#case-study">case study</a>
-                    </div>
-                    <a href="#">
-                    <div class="halfheight-bg example3">
-                      <img src="images/sprite/icn-play-sm.png" class="video-play" />
-                    </div>
-                    <div class="col2-content half">
-                      <h3>12 The best drive time data for sales forecasting</h3>
-                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
-                    </div></a>
+                  <div class="video-container video-full hide" data-video-id="A1i6OjzAfjA">
+                    <div id=""></div>
                   </div>
+                  <span class="hidden-video-content">
+                    <div class="col-xs-12">
+                      <div class="col-xs-12 type-cat border white pos">
+                        <a href="#case-study">case study</a>
+                      </div>
+                      <a href="#">
+                      <div class="halfheight-bg example3">
+                        <img src="images/sprite/icn-play-sm.png" class="video-play" />
+                      </div>
+                      <div class="col2-content half">
+                        <h3>12 The best drive time data for sales forecasting</h3>
+                        <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      </div></a>
+                    </div>
+                  </span>
                 </div><!--/.module.col2-->
 
                 <div class="module col2 right darkbg bgexample1">
-                    <div class="col-xs-12 type-cat border white pos">
-                      <a href="#case-study">case study</a>
-                      <a href="#finance" class="last">finance</a>
+                    <div class="video-container video-full hide" data-video-id="XouclG_puWs">
+                      <div id=""></div>
                     </div>
-                    <a href="#"><div class="table">
-                      <div class="vertical-wrap">
-                        <div class="col2-content">
-                          <img src="images/sprite/icn-play-circle.png" class="video-play" />
-                          <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
-                        </div>
-                      </div><!--/.vertical-wrap-->
-                    </div></a><!--/.table-->
-                    <div class="col-xs-12 cat-techlinks">
-                      <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
-                    </div><!--/.cat-techlinks-->
+                    <span class="hidden-video-content">
+                      <div class="col-xs-12 type-cat border white pos">
+                        <a href="#case-study">case study</a>
+                        <a href="#finance" class="last">finance</a>
+                      </div>
+                      <a href="#"><div class="table">
+                        <div class="vertical-wrap">
+                          <div class="col2-content">
+                            <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                            <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                          </div>
+                        </div><!--/.vertical-wrap-->
+                      </div></a><!--/.table-->
+                      <div class="col-xs-12 cat-techlinks">
+                        <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
+                      </div><!--/.cat-techlinks-->
+                    </span>
                 </div><!--/.module.col2-->
 
               </div><!--/.row-->
