added Schwan and nationwide case studies, added light version of header

--- a/app/barbican.html
+++ b/app/barbican.html
@@ -35,7 +35,7 @@
         <![endif]-->
     </head>
     <body class="long-form-content barbican">
-      <header>
+      <header class="">
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
@@ -124,13 +124,13 @@
                   <img src="images/long-form-content/mapinfo-professional.png">
                   <h3><a href="#">MapInfo Professional</a></h3>
                   <p>Seamlessly combines with Risk Data Suite  to assist underwriting decisions by visualizing potential risks.</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
                 <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
                   <img src="images/long-form-content/mapinfo-drive-time.png">
                   <h3><a href="#">Risk Data Suite</a></h3>
                   <p>Software that combines statistical info with high-quality modeling on a variety of perils including flood, subsidence, crime and arson.</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
               <!--<div class="view-all">
