--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -35,7 +35,7 @@
         <![endif]-->
     </head>
     <body class="long-form-content">
-      <header>
+      <header class="">
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
@@ -125,19 +125,19 @@
                   <img src="images/long-form-content/mapinfo-professional.png">
                   <h3><a href="#">MapInfo Professional</a></h3>
                   <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
                 <div class="tech col-sm-4 col-xs-12">
                   <img src="images/long-form-content/mapinfo-drive-time.png">
                   <h3><a href="#">MapInfo Drivetime</a></h3>
                   <p>TomTom Speed Profile Data to calculate accurate travel time</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
                 <div class="tech col-sm-4 col-xs-12">
                   <img src="images/long-form-content/pca.png">
                   <h3>PCA’s Gravitiy Modelling System</h3>
                   <p>Seamless integration with  Peugeot’s Gravity Modeling System for network planning and optimization</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
               <div class="row additional-content"><!-- second row - 2 options -->
@@ -145,13 +145,13 @@
                   <img src="images/long-form-content/mapinfo-professional.png">
                   <h3><a href="#">MapInfo Professional</a></h3>
                   <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
                 <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
                   <img src="images/long-form-content/mapinfo-drive-time.png">
                   <h3><a href="#">MapInfo Drivetime</a></h3>
                   <p>TomTom Speed Profile Data to calculate accurate travel time</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
               <div class="row additional-content"><!-- second row - 2 options -->
@@ -159,7 +159,7 @@
                   <img src="images/long-form-content/mapinfo-professional.png">
                   <h3><a href="#">MapInfo Professional</a></h3>
                   <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-                  <a href="#">Learn More ></a>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
               <div class="view-all">
