--- a/app/nationwide.html
+++ b/app/nationwide.html
@@ -34,7 +34,7 @@
         <!-- endbuild -->
         <![endif]-->
     </head>
-    <body class="long-form-content">
+    <body class="long-form-content nationwide">
       <header class="">
         <div class="container-fluid">
           <div class="row">
@@ -63,12 +63,12 @@
           <div class="container-fluid hero">
             <div class="hidden-xs type-cat border white pos">
               <a href="#">Case Study</a>
-              <a href="#" class="last">Retail</a>
+              <a href="#" class="last">Banking</a>
             </div>
             <div class="row">
               <div class="headline col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                <h1></h1>
-                <h2> </h2>
+                <h1>Develop a single view of each customer.</h1>
+                <h2>By optimizing its customer interactions, Nationwide delivered huge returns with incremental sales running over 200%.</h2>
               </div>
             </div>
             <div class="row social-container light">
@@ -85,28 +85,28 @@
         <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2"></p>
+              <p class="col-sm-8 col-sm-offset-2">Portrait solutions maximized cross selling opportunities and customer satisfaction increased because of the relevant sales prompts provided to employees.</p>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Client Profile</h3>
+                <p>Largest building society (credit union) in the world</p>
+                <p>More than 11 million members</p>
+                <p>Around 16,000 employees with 870 branches</p>
               </div>
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Business Goals</h3>
+                <p>Deliver improved customer experience
+                <p>Develop intelligent, actionable prompts for employees
+                <p>Boost market share</p>
               </div>
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Benefits</h3>
+                <p>Gain a detailed view of customer contact history</p>
+                <p>Generate business through cross selling</p>
+                <p>Software upgrade paid for itself in less than 2 years</p>
               </div>
             </div>
           </div>
@@ -116,57 +116,23 @@
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2></h2></div>
+                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
                 </div>
               </div>
-              <div class="row">
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/mapinfo-drive-time.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/pca.png">
-                  <h3></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-              </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-1">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
-                  <img src="images/long-form-content/mapinfo-drive-time.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-              </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
+              <div class="row"><!-- 1 options -->
                 <div class="tech col-sm-4 col-xs-12 col-sm-offset-4">
                   <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
+                  <h3><a href="#">Pitney Bowes Portrait solutions</a></h3>
+                  <p>Create customer profiles to compare and analyze their lifestyles. You can also learn about purchase behaviors to optimize marketing strategies and increase sales.</p>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
-              <div class="view-all">
+              <!--<div class="view-all">
                 <a class="show" href="#">View All Technologies</a>
                 <img class="show" src="images/sprite/icn-view-all.jpg" alt="view all">
                 <a class="hide" href="#">Collapse</a>
                 <img class="hide" src="images/sprite/icn-view-collapse.jpg" alt="collapse">
-              </div>
+              </div>-->
             </div><!-- border -->
           </div>
         </div><!-- tech-used -->
@@ -175,51 +141,47 @@
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="title-bg-detail"><h2>Executive Summary</h2></div>
               <div class="quote">
-                <blockquote class="copy">""</blockquote>
-                <p class="small bold"></p>
-                <p class="small"></p>
-                <p class="small"></p>
+                <blockquote class="copy">“With Portrait we can treat all 11 million customers as individuals, and are well placed to better meet their needs and thus do more business with more people for longer than we did before.”</blockquote>
+                <p class="small bold">Simon Baines</p>
+                <p class="small">Head of Customer Insight</p>
+                <p class="small">Nationwide Building Society</p>
               </div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Nationwide traditionally developed most strategic systems in-house but selected Pitney Bowes Portrait solutions as its core customer interaction management platform. Pitney Bowes Portrait solutions enabled Nationwide to present the single view of each customer, including details of each interaction, and intelligent, actionable prompts to help employees to make the most of each customer interaction. By optimizing its customer interactions Nationwide has delivered real returns with incremental sales running over 200% of original targets.</p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As a mutual organization in a largely homogenous market, Nationwide knew that the key to increasing its market share was to deliver a highly personalized service that offered its members long-term value. The company lacked tools for employees to be able to treat customers as individuals.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Nationwide, with the help of Pitney Bowes, aimed to equip employees with the specific means to deliver a vastly improved customer experience. </p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <div class="title-bg-detail"><h2>Project Description and Solution</h2></div>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Partnering with Pitney Bowes Software, Nationwide planned to optimize the value of customer interactions by developing the single view of each customer. This would include details of each interaction and intelligent, actionable prompts to help employees make the most of each customer interaction.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The single customer view is delivered by integrating with the Nationwide CRM system – its highly configurable, process centric approach was to model and support the processes that drive Nationwide’s customer interactions and deploy them efficiently and consistently across all channels. Portrait allows all of Nationwide’s customer data to stay where it naturally lives, with the real-time ‘single view’ generated when needed.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As a result Nationwide’s customer personal data is now highly accurate, it has improved the value of each customer by maximizing cross-selling opportunities and, at the same time, customer satisfaction has been raised because sales prompts are relevant.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Pitney Bowes Portrait solutions have also been integrated with the Society’s teller application so that employees on the counter are able to readily access prompts and customer information in a timely way during routine financial transactions.</p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
+              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
               <div class="quote">
-                <blockquote class="copy">""</blockquote>
-                <p class="small bold"></p>
-                <p class="small"></p>
-                <p class="small"></p>
+                <blockquote class="copy">“Portrait Prompts help us to sell more through inbound service conversations than we do through traditional outbound direct marketing.”</blockquote>
+                <p class="small bold">Simon Baines</p>
+                <p class="small">Head of Customer Insight</p>
+                <p class="small">Nationwide Building Society</p>
               </div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">With its Dynamic Single View of the customer enabling Pitney Bowes Software to cater for each customer as an individual, Nationwide has improved services to its wide consumer base while being able to generate more business through its improved cross selling and marketing efficiency.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Pitney Bowes Software has given Nationwide the flexibility to respond to the demands of its 11 million members. Reflecting the needs of its customers, Nationwide is able to react rapidly to changes in the market, helping to drive its competitive advantage.</p>
             </div>
           </div>
           <div class="row social-container">
@@ -239,18 +201,18 @@
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
                 <div class="title-bg-detail"><h2></h2></div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Case Study</a>
+                    <a href="#">Retail</a>
+                    <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Case Study</a>
+                    <a href="#">Finance</a>
+                    <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Article</a>
+                    <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
             </div>
