--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         <![endif]-->
     </head>
     <body>
-      <header>
+      <header class="">
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
