--- a/app/schwan.html
+++ b/app/schwan.html
@@ -34,13 +34,14 @@
         <!-- endbuild -->
         <![endif]-->
     </head>
-    <body class="long-form-content">
-      <header class="">
+    <body class="long-form-content schwan">
+      <header class="lightHeader">
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html">
-                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                <img src="images/pitneybowes-logo-dark.png" alt="pitney bowes logo" class="hidden-xs"/>
+                <!--<img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>-->
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
             </div>
@@ -59,19 +60,19 @@
       </header>
 
       <div class="main-content">
-        <div class="hero-wrapper darkbg">
+        <div class="hero-wrapper">
           <div class="container-fluid hero">
-            <div class="hidden-xs type-cat border white pos">
+            <div class="hidden-xs type-cat border pos">
               <a href="#">Case Study</a>
               <a href="#" class="last">Retail</a>
             </div>
             <div class="row">
               <div class="headline col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                <h1></h1>
-                <h2> </h2>
+                <h1>Combine multiple lists into a single customer record.</h1>
+                <h2>Schwan’s experienced a 25% reduction in the number of new customers being duplicated by handheld devices in the field.</h2>
               </div>
             </div>
-            <div class="row social-container light">
+            <div class="row social-container">
                 <ul class="col-xs-12">
                   <li class="facebook"><a href="#"></a></li>
                   <li class="twitter"><a href="#"></a></li>
@@ -85,28 +86,28 @@
         <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <p class="col-sm-8 col-sm-offset-2"></p>
+              <p class="col-sm-8 col-sm-offset-2">Pitney Bowes technology seamlessly integrates with Schwan’s Home Service’s web store, call center application and the handheld devices used in the field.</p>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Client Profile</h3>
+                <p>Distributor of fine frozen foods via multiple channels</p>
+                <p>Multibillion-dollar private company</p>
+                <p>Products available in 50 countries</p>
               </div>
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Business Goals</h3>
+                <p>Optimize sales and efficiency</p>
+                <p>Consolidate customer data</p>
+                <p>Improve customer service</p>
               </div>
               <div class="benefit col-sm-4 col-xs-12">
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h3>Benefits</h3>
+                <p>Gain a more complete view of the customer</p>
+                <p>Address validation performed in real-time</p>
+                <p>Prevent duplicate mailings</p>
               </div>
             </div>
           </div>
@@ -116,57 +117,23 @@
             <div class="border">
               <div class="row first-row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                  <div class="title-bg-detail"><h2></h2></div>
+                  <div class="title-bg-detail"><h2>Technology Used</h2></div>
                 </div>
               </div>
-              <div class="row">
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/mapinfo-drive-time.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12">
-                  <img src="images/long-form-content/pca.png">
-                  <h3></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-              </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-1">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
-                  <img src="images/long-form-content/mapinfo-drive-time.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
-                </div>
-              </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
+              <div class="row"><!-- 1 option -->
                 <div class="tech col-sm-4 col-xs-12 col-sm-offset-4">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#"></a></h3>
-                  <p></p>
-                  <a href="#">Learn More ></a>
+                  <img src="images/long-form-content/mapinfo-drive-time.png">
+                  <h3><a href="#">Spectrum Technology Platform</a></h3>
+                  <p>Consolidate customer information from disparate data sources for master data management, analytics and business intelligence.</p>
+                  <a href="#">Learn more</a>
                 </div>
               </div>
-              <div class="view-all">
+              <!--<div class="view-all">
                 <a class="show" href="#">View All Technologies</a>
                 <img class="show" src="images/sprite/icn-view-all.jpg" alt="view all">
                 <a class="hide" href="#">Collapse</a>
                 <img class="hide" src="images/sprite/icn-view-collapse.jpg" alt="collapse">
-              </div>
+              </div> -->
             </div><!-- border -->
           </div>
         </div><!-- tech-used -->
@@ -175,51 +142,51 @@
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="title-bg-detail"><h2>Executive Summary</h2></div>
               <div class="quote">
-                <blockquote class="copy">""</blockquote>
-                <p class="small bold"></p>
-                <p class="small"></p>
-                <p class="small"></p>
+                <blockquote class="copy">"Consolidate customer information from disparate data sources for master data management, analytics and business intelligence."</blockquote>
+                <p class="small bold">Connie Gugel,</p>
+                <p class="small">Senior Systems Analyst,</p>
+                <p class="small">Schwan Food Company</p>
               </div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Schwan’s Home Service, the home delivery business of The Schwan Food Company, has nearly 500 sales and distribution centers in the United States. Given the vast scope of business, it needed to manage thousands of customer records entering their system per day. Records are entered from various touch points as customers place orders online, by phone, or directly from the Customer Service Manager at their doorstep. With multiple customer touch points, it was easy to overwhelm the system with duplicate customer records.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Recognizing this process presented significant challenges for coordinating orders and scheduling deliveries, the company implemented the Pitney Bowes Spectrum™ Technology Platform to match, de-duplicate and consolidate customer data into a single, comprehensive customer record.</p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">A potential home delivery customer registering for an account at Schwans.com or through the call center would be assigned a customer number. Meanwhile, the local depot would be alerted to schedule service for the potential customer. A Customer Service Manager(CSM) would then visit the customer and re-enter their information into a handheld device used to collect sales orders, deliveries and track inventory.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This disconnect between customer touch points resulted in the creation of two separate records for the same customer, which led to missed sales, overlapping delivery cycles, duplicate mailings, and ultimately, customer dissatisfaction. The company needed a comprehensive data quality solution to help improve customer service and depot efficiency.</p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-xs-offset-0 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <div class="title-bg-detail"><h2>Solution</h2></div>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The Pitney Bowes Spectrum Technology Platform seamlessly integrates with Schwan’s Home Service’s web store, call center application and the handheld devices used by Customer Service Managers (CSMs) in the field. When the web store registers a new
+                customer, the data quality solution standardizes the address and attempts to match it to an existing customer record—thereby preventing the creation of duplicate records.</p>
+              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Customer address validation and standardization is performed in real-time while new addresses are being entered into the system. Addresses that are not able to be validated or standardized in real-time are automatically submitted for the daily address scrubbing process. While in the field, CSM handheld devices run in a disconnected mode, uploading customer data at the end of each day to corporate headquarters.</p>
             </div>
           </div>
         </div><!-- copy-section -->
         <div class="copy-section container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2></h2></div>
+              <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
               <div class="quote">
-                <blockquote class="copy">""</blockquote>
-                <p class="small bold"></p>
-                <p class="small"></p>
-                <p class="small"></p>
+                <blockquote class="copy">"After we implemented the Pitney Bowes Spectrum Enterprise Data Quality Solution customer matching module, we saw a 25 percent reduction in the number of new customers being created by the handhelds."</blockquote>
+                <p class="small bold">Connie Gugel,</p>
+                <p class="small">Senior Systems Analyst,</p>
+                <p class="small">Schwan Food Company</p>
               </div>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
-              <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy"></p>
+              <ul class="col-xs-12 col-sm-8 col-sm-offset-2 copy">
+                <li>Schwan’s Home Services experienced a 25 percent reduction in the number of new customers being created by handheld devices in the field.</li>
+                <li>Previously, each time a new customer was registered, scheduled orders needed to be manually entered into the delivery route. Implementing the data quality solution eliminated this inefficiency.</li>
+                <li>Prospect lists are compared against the company’s database, preventing duplicate mailings.</li>
+                <li>Better customer data quality resulted in a more complete, 360-degree view of the customer.</li>
+              </ul>
             </div>
           </div>
           <div class="row social-container">
@@ -239,18 +206,18 @@
               <div class="col-xs-12 col-sm-10 col-sm-offset-1">
                 <div class="title-bg-detail"><h2></h2></div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Case Study</a>
+                    <a href="#">Retail</a>
+                    <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Case Study</a>
+                    <a href="#">Finance</a>
+                    <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
-                    <a href="#"></a>
-                    <p></p>
+                    <a href="#">Article</a>
+                    <p>Using knowledge graphs to unlock consumer data</p>
                 </div>
               </div>
             </div>
