added ie8 style sheet, added mobile version of hero images, added mobile version of dark logo and search icon

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -22,6 +22,7 @@
         <!-- build:css(.tmp) styles/main-category.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/category.css">
+        <link rel="stylesheet" href="styles/ie8.css">
         <!-- endbuild -->
 
         <!--[if lt IE 9]>
