--- a/app/category-all.html
+++ b/app/category-all.html
@@ -38,10 +38,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
-              <a href="index.html">
-                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
-                <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
-              </a>
+              <a href="index.html" title="Pitney Bowes logo"></a>
             </div>
             <nav class="col-xs-6">
               <ul>
