--- a/app/category-all.html
+++ b/app/category-all.html
@@ -40,6 +40,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
+              <span class="hidden-xs cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
