--- a/app/category.html
+++ b/app/category.html
@@ -39,7 +39,7 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html" title="Pitney Bowes logo"></a>
-              <span class="cat-title">Location Intelligence</span>
+              <span class="hidden-xs cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
