removed link disabling on category page

--- a/app/sprint3demo.html
+++ b/app/sprint3demo.html
@@ -60,7 +60,7 @@
                 <div class="col-xs-12">
 
                   <ul class="cat-links">
-                    <li><h1>Sprint 3 Demo Links</h1></li>
+                    <li><h1>Sprint 3 Demo</h1></li>
                     <li class="visible-xs"><a href="nationwide.html">Case Study: Nationwide</a></li>
                     <li><a href="schwan.html">Case Study: Schwan</a></li>
                     <li><a href="barbican.html">Case Study: Barbican</a></li>
