updated second row of tech used on peugeot

--- a/app/peugeot.html
+++ b/app/peugeot.html
@@ -138,22 +138,20 @@
                   <a href="#">Learn more</a>
                 </div>
               </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-1">
-                  <img src="images/long-form-content/mapinfo-professional.png">
-                  <h3><a href="#">MapInfo Professional</a></h3>
-                  <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-                  <a href="#">Learn more</a>
-                </div>
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-2">
+              <div class="row additional-content">
+                <div class="tech col-sm-4 col-xs-12">
                   <img src="images/long-form-content/mapinfo-drive-time.png">
                   <h3><a href="#">MapInfo Drivetime</a></h3>
                   <p>TomTom Speed Profile Data to calculate accurate travel time</p>
                   <a href="#">Learn more</a>
                 </div>
-              </div>
-              <div class="row additional-content"><!-- second row - 2 options -->
-                <div class="tech col-sm-4 col-xs-12 col-sm-offset-4">
+                <div class="tech col-sm-4 col-xs-12">
+                  <img src="images/long-form-content/mapinfo-professional.png">
+                  <h3><a href="#">MapInfo Professional</a></h3>
+                  <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+                  <a href="#">Learn more</a>
+                </div>
+                <div class="tech col-sm-4 col-xs-12">
                   <img src="images/long-form-content/mapinfo-professional.png">
                   <h3><a href="#">MapInfo Professional</a></h3>
                   <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
