removed cateogyr-all page

--- a/app/sprint3demo.html
+++ b/app/sprint3demo.html
@@ -19,7 +19,7 @@
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
-        <!-- build:css(.tmp) styles/main.css -->
+        <!-- build:css(.tmp) styles/main-demo.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/demos.css">
 
@@ -61,11 +61,11 @@
 
                   <ul class="cat-links">
                     <li><h1>Sprint 3 Demo</h1></li>
-                    <li class="visible-xs"><a href="nationwide.html">Case Study: Nationwide</a></li>
+                    <li><a href="nationwide.html">Case Study: Nationwide</a></li>
                     <li><a href="schwan.html">Case Study: Schwan</a></li>
                     <li><a href="barbican.html">Case Study: Barbican</a></li>
                     <li><a href="peugeot.html">Case Study: Peugeot</a></li>
-                    <li><a href="category-all.html">Category: Location Intelligence</a></li>
+                    <li><a href="category.html">Category: Location Intelligence</a></li>
                   </ul>
                 </div>
               </div>
